--- a/package.json
+++ b/package.json
@@ -20,12 +20,23 @@
     }
   },
   "dependencies": {
-    "nuxt": "^2.0.0",
-    "cross-env": "^5.2.0",
-    "koa": "^2.6.2",
-    "element-ui": "^2.4.11",
     "@nuxtjs/axios": "^5.3.6",
-    "@nuxtjs/pwa": "^3.0.0-0"
+    "@nuxtjs/pwa": "^3.0.0-0",
+    "axios": "^0.19.0",
+    "cross-env": "^5.2.0",
+    "crypto-js": "^3.1.9-1",
+    "element-ui": "^2.4.11",
+    "koa": "^2.6.2",
+    "koa-bodyparser": "^4.2.1",
+    "koa-generic-session": "^2.0.1",
+    "koa-json": "^2.0.2",
+    "koa-passport": "^4.1.3",
+    "koa-redis": "^4.0.0",
+    "koa-router": "^7.4.0",
+    "mongoose": "^5.6.11",
+    "nodemailer": "^6.3.0",
+    "nuxt": "^2.0.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^1.0.1",
